--- a/pqserve/static/paqu.css
+++ b/pqserve/static/paqu.css
@@ -18,6 +18,12 @@ a:hover {
 td.right {
   text-align: right;
 }
+td.ok {
+    background-color: #80ff80;
+}
+td.error {
+    background-color: #ff8080;
+}
 div.example, div.vb {
     padding: 1em 2em;
     margin: 1em 0px 2em 0px;;
@@ -47,11 +53,35 @@ li.li2 {
     margin-top: .3em;
 }
 
-div.foot {
+div.home {
+    font-size: small;
+    border-bottom: 1px solid grey;
+    padding-bottom: .5em;
+    margin-bottom: 1.5em;
+    width: 36em;
+}
+
+div.next {
+    font-size: small;
+    border-top: 1px solid grey;
+    padding-top: .5em;
+    margin-top: 1.5em;
+    width: 36em;
+}
+
+div.foot, div.login {
     text-align: right;
     font-size: small;
 }
 
 img.noborder {
     border: 0px;
+}
+.hide {
+    display: none;
+    visibility: hidden;
+}
+
+img.logo {
+    margin-bottom: 2em;
 }
