--- a/pqserve1/static/paqu.css
+++ b/pqserve1/static/paqu.css
@@ -18,12 +18,6 @@ a:hover {
 td.right {
   text-align: right;
 }
-td.ok {
-    background-color: #80ff80;
-}
-td.error {
-    background-color: #ff8080;
-}
 div.example, div.vb {
     padding: 1em 2em;
     margin: 1em 0px 2em 0px;;
@@ -53,23 +47,7 @@ li.li2 {
     margin-top: .3em;
 }
 
-div.home {
-    font-size: small;
-    border-bottom: 1px solid grey;
-    padding-bottom: .5em;
-    margin-bottom: 1.5em;
-    width: 36em;
-}
-
-div.next {
-    font-size: small;
-    border-top: 1px solid grey;
-    padding-top: .5em;
-    margin-top: 1.5em;
-    width: 36em;
-}
-
-div.foot, div.login {
+div.foot {
     text-align: right;
     font-size: small;
 }
@@ -77,7 +55,7 @@ div.foot, div.login {
 img.noborder {
     border: 0px;
 }
-.hide {
-    display: none;
-    visibility: hidden;
+
+img.logo {
+    margin-bottom: 2em;
 }
