--- a/pqserve/static/paqu.css
+++ b/pqserve/static/paqu.css
@@ -225,6 +225,13 @@ tr.last td.error {
     border-bottom: 1px solid lightgrey;
 }
 
+div.warning {
+    margin: 2em 0px;
+    padding: 1em 4em;
+    border: 4px solid red;
+    background-color: #ffe0e0;
+}
+
 /****************************************************************/
 
 div.submenu {
