--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -257,4 +257,13 @@ div.a9999 {
 div.corpushelp {
     margin: 1em 2em;
 }
-1
+
+ol.xpath li {
+    margin: .3em 0px;
+}
+
+.c1 { background-color: #7FCDBB; }
+.c2 { background-color: #41B6C4; }
+.c3 { background-color: #1D91C0; color: #ffffff; }
+.c4 { background-color: #225EA8; color: #ffffff; }
+.c5 { background-color: #0C2C84; color: #ffffff; }
