--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -44,7 +44,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
-#stats, #statsrel {
+#stats, #statsrel, #xstats {
    background:#e0e0e0;
    padding: 10px;
    font-size: small;
@@ -210,6 +210,10 @@ div.warning {
     padding: 1em 4em;
     border: 4px solid red;
     background-color: #ffe0e0;
+}
+
+span.nil {
+    color: #909090;
 }
 
 /****************************************************************/
