stats, xpath stats: uitvoer verbeterd

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -180,6 +180,11 @@ a.opties:hover
     color: ##0000c0;
 }
 
+table.breed td {
+    padding: 0px 1em;
+}
+
+
 table.corpora {
     background-color: #f3f3f3;
     padding: .5em;
