pqserve: xpath: statistiek: gecombinaarde waardes van dochter: nu ook via index nodes

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -192,7 +192,8 @@ table.corpora {
     border: 1px solid lightgrey;
 }
 
-table.corpora td {
+table.corpora td,
+table.breed td {
     vertical-align: top;
 }
 
