--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -298,3 +298,36 @@ ol.xpath li {
 .c5 { background-color: #0C2C84; color: #ffffff; }
 
 /****************************************************************/
+
+.dropdown-menu {
+    font-size: small;
+    border: 1px solid #000;
+    background-color: white;
+}
+
+.dropdown-menu li {
+    border-top: 1px solid #ddd;
+    padding: 2px 5px;
+}
+
+.dropdown-menu li:first-child {
+    border-top: none;
+}
+
+.dropdown-menu li:hover,
+.dropdown-menu .active {
+    background-color: rgb(110, 183, 219);
+}
+
+
+/* SHOULD not modify */
+
+.dropdown-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu a:hover {
+    cursor: pointer;
+}
