pqserve: bugfix in zoeken; diverse verbeteringen in gebruik xpath

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -331,3 +331,8 @@ ol.xpath li {
 .dropdown-menu a:hover {
     cursor: pointer;
 }
+
+#loading {
+    position: absolute;
+    margin-left: -60px;
+}
