pqserve: xpath: macro's: knoppen voor opslaan/uploaden vet als er iets is veranderd

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -347,3 +347,8 @@ a.normal {
   white-space: pre-wrap;
   font-family: monospace;
 }
+
+.bold {
+    font-weight: bold;
+    border: 2px solid red;
+}
