pqserve: uitleg met afbeeldingen, xpath alleen met dbxml

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -352,3 +352,8 @@ a.normal {
     font-weight: bold;
     border: 4px solid #FF6600;
 }
+
+div.nodbxml .dbxml {
+    display: none;
+    visibility: hidden;
+}
