--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -264,11 +264,21 @@ div.submenu {
   text-decoration: none;
 }
 
-.submenu li a:hover{
-    background: #0000c0;
-    color: #FFFFFF;
-    text-decoration: none;
+.submenu li a:hover {
+  background: #0000c0;
+  color: #FFFFFF;
+  text-decoration: none;
 }
+
+.submenu li a.normal {
+  color: #0000c0;
+  display: inline;
+  font-family: verdana;
+  font-weight: normal;
+  padding: 0px;
+  text-decoration: underline;
+}
+
 .optielijst {
   list-style:none;
   margin:0px;
