--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -61,8 +61,12 @@ a.ico:hover {
     padding: 0px .5em;
 }
 
+table.right td,
 td.right {
   text-align: right;
+}
+table.right td.left {
+  text-align: left;
 }
 td.ok {
     background-color: #80ff80;
