--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -100,12 +100,15 @@ td.link {
     color: #0000c0;
     cursor: pointer;
 }
-div.example, div.vb {
+div.example, div.vb, div.voorbeeld {
     padding: 1em 2em;
     margin: 1em 0px 2em 0px;;
     background-color: white;
     border: 1px solid lightgrey;
     line-height: 1.5em;
+}
+div.voorbeeld {
+   font-family: monospace;
 }
 dt {
    font-weight: bold;
