--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -460,3 +460,7 @@ img.maxwidth,
 table.credits img {
     max-width: 100%;
 }
+form.foliafile {
+    padding: 1em 2em 2em 2em;
+    line-height: 1.5em;
+}
