--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -77,6 +77,7 @@ table.home td {
    padding: .3em 0px;
 }
 
+div.right,
 table.right td,
 td.right {
   text-align: right;
@@ -462,6 +463,8 @@ table.credits img {
 }
 form.foliafile,
 div.foliaform {
+    background-color: white;
+    margin: 1em 0em;
     padding: 1em 2em;
     line-height: 1.5em;
 }
