--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -462,9 +462,19 @@ table.credits img {
     max-width: 100%;
 }
 form.foliafile,
-div.foliaform {
+div.foliaform,
+div.output {
     background-color: white;
     margin: 1em 0em;
     padding: 1em 2em;
     line-height: 1.5em;
+}
+div.output {
+    max-height: 50em;
+    font-family: monospace;
+    white-space: pre;
+    overflow: scroll;
+}
+hr.wide {
+    margin: 1em 0em;
 }
