--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -281,6 +281,12 @@ div.warning {
     border: 4px solid red;
     background-color: #ffe0e0;
 }
+div.info {
+    margin: 2em 0px;
+    padding: 1em 4em;
+    border: 4px solid green;
+    background-color: #e0ffe0;
+}
 
 td.nil {
     color: #909090;
@@ -470,7 +476,7 @@ div.output {
     line-height: 1.5em;
 }
 div.output {
-    max-height: 50em;
+    max-height: 20em;
     font-family: monospace;
     white-space: pre;
     overflow: scroll;
