--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -1,13 +1,19 @@
+* {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
 body {
-   background-color :#eeeeee;
-   // background-image: url("paqu.png");
-   // background-postion: top left;
-   // background-attachment: scroll;
-   // background-repeat: no-repeat;
-   font-family: verdana;
-   margin: 0px auto 4em auto;
-   padding: 0px .5em;
-   max-width: 960px;
+    background-color :#eeeeee;
+    // background-image: url("paqu.png");
+    // background-postion: top left;
+    // background-attachment: scroll;
+    // background-repeat: no-repeat;
+    font-family: verdana;
+    margin: 0px auto 4em auto;
+    padding: 0px .5em;
+    max-width: 960px;
 }
 
 #topmenu, #login {
@@ -86,6 +92,7 @@ table.right td,
 td.right {
   text-align: right;
 }
+th.left,
 table.right td.left {
   text-align: left;
 }
@@ -497,4 +504,25 @@ code {
     white-space: nowrap;
     background-color: #ffffd0;
     padding: 0px .3em;
+}
+
+.spod {
+    padding-bottom: 5em;
+}
+#spodfoot {
+    z-index: 2;
+    background-color: #eeeeee;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-top: 1px solid #c0c0c0;
+    -webkit-box-shadow: 0 -6px 20px 0 rgba(0,0,0,0.19);
+    -moz-box-shadow: 0 -6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 -6px 20px 0 rgba(0,0,0,0.19);
+}
+#spodinfoot {
+    margin: 0px auto;
+    padding: 1em;
+    max-width: 960px;
 }
