pqserve: spod: uitvouwen van onderdelen; ja/nee-vragen alleen als corpus vraagtekens bevat

--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -543,3 +543,10 @@ code {
 .footspace {
     padding: 2em 0px;
 }
+
+.spodblock {
+    margin-top: 1em;
+}
+.spodblock > a {
+   font-weight: bold;
+}
