--- a/src/pqserve/static/paqu.css
+++ b/src/pqserve/static/paqu.css
@@ -559,6 +559,7 @@ table.spod {
     border-collapse: collapse;
 }
 table.spod th.b {
+    border-top: 1px solid grey;
     border-bottom: 1px solid grey;
 }
 table.spod th.r,
